@@ -26,6 +26,26 @@ INSERT INTO `db_patches` VALUES ('POCOR-2208', NOW());
 UPDATE labels SET field_name = 'Deletable' WHERE module = 'WorkflowSteps' AND module_name = 'Workflow -> Steps' AND field_name = 'Removable';
 
 
+-- POCOR-2603
+INSERT INTO `labels` (`id`, `module`, `field`, `module_name`, `field_name`, `code`, `name`, `visible`, `created_user_id`, `created`) VALUES
+(uuid(), 'Accounts', 'password', 'Students -> Accounts | Staff -> Accounts | Security -> Accounts', 'New Password', NULL, NULL, 1, 1, now()),
+(uuid(), 'Accounts', 'retype_password', 'Students -> Accounts | Staff -> Accounts | Security -> Accounts', 'Retype New Password', NULL, NULL, 1, 1, now()),
+(uuid(), 'StudentAccount', 'password', 'Institution -> Students -> Accounts', 'New Password', NULL, NULL, 1, 1, now()),
+(uuid(), 'StudentAccount', 'retype_password', 'Institution -> Students -> Accounts', 'Retype New Password', NULL, NULL, 1, 1, now()),
+(uuid(), 'StaffAccount', 'password', 'Institution -> Staff -> Accounts', 'New Password', NULL, NULL, 1, 1, now()),
+(uuid(), 'StaffAccount', 'retype_password', 'Institution -> Staff -> Accounts', 'Retype New Password', NULL, NULL, 1, 1, now())
+;
+
+
+-- POCOR-2658
+-- db_patches
+INSERT INTO `db_patches` VALUES ('POCOR-2658', NOW());
+
+-- labels
+UPDATE `labels` SET `field_name` = 'Area Administrative' WHERE `module` = 'Institutions' AND `field` = 'area_administrative_id';
+UPDATE `labels` SET `field_name` = 'Area Education' WHERE `module` = 'Institutions' AND `field` = 'area_id';
+
+
 -- 3.4.16
 -- db_version
 UPDATE config_items SET value = '3.4.16' WHERE code = 'db_version';
